EXTRA_DIST = \
	BDsyntax.tex	cobol.tex	glauth.tex		\
	monitor.tex	DIsyntax.tex	copy.tex 		\
	glclient.tex	panda.tex	DBsyntax.tex		\
	HTCsyntax.tex	copygen.tex	glserver.tex		\
	programing.tex	DDsyntax.tex	LDsyntax.tex		\
	db.tex	glterm.tex	struct.tex			\
	dbgen.tex	htcgen.tex	user.tex		\
	about.tex      dbredirector.tex  htserver.tex		\
	wfc.tex		aps.tex	     dbstub.tex			\
	lang.tex	checkdir.tex	mon.tex			\
	event.doc	DBIO.tex	HAKAMA.tex		\
	PostgreSQL.tex	Shell.tex	V2			\
	dbs.tex		PGIO.tex	env.tex			\
	memo.PostgreSQL	pgserver.tex 
